force-app/src/objects/c2g__StatisticalBasisLineItem__c.object
<CustomObject>
    <description>Stores the values of statistical data.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StatisticalBasis__c</fullName>
        <label>Statistical Basis</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipLabel>Statistical Basis Line Items</relationshipLabel>
        <relationshipName>StatisticalBasisLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Statistical Basis Line Item</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistical Basis Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>